@@ -369,6 +369,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   recent changes page.
 * (bug 14511) MediaWiki:Delete-legend is no longer double escaped
 * Generate correct section anchors for numeric headers
+* (bug 14520) Don't load nonexistent CSS fix files for Chick, Myskin, Simple
 
 === API changes in 1.13 ===
 
